Fix vertical spacing of results

--- a/rando/static/css/objects/result.less
+++ b/rando/static/css/objects/result.less
@@ -21,7 +21,7 @@ width: 32%;
 
 #side-bar .result .info-result {
   padding-left: 5px;
-  min-height: 110px;
+  min-height: 115px;
   max-width: 68%;
   display: inline-block;
   box-sizing: border-box;
