--- a/rando/static/css/style.css
+++ b/rando/static/css/style.css
@@ -783,7 +783,7 @@ ul.social-buttons li {
 }
 #side-bar .result .info-result {
   padding-left: 5px;
-  min-height: 110px;
+  min-height: 115px;
   max-width: 68%;
   display: inline-block;
   box-sizing: border-box;
